[gd_scene load_steps=6 format=3 uid="uid://dc2grv1ki174x"]

[ext_resource type="Script" path="res://end screen/end_screen.gd" id="1_thlc3"]
[ext_resource type="Texture2D" uid="uid://ckdt5k7wv7x7v" path="res://level/background.png" id="2_o3n18"]
[ext_resource type="Script" path="res://end screen/title.gd" id="3_fbtbt"]
[ext_resource type="FontFile" uid="uid://d1egroxgyfewl" path="res://fonts/poco/Poco.ttf" id="3_jvf8m"]
[ext_resource type="Script" path="res://end screen/retry_button.gd" id="3_wtwfm"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -777.0
offset_bottom = -436.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_thlc3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -9.0
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("2_o3n18")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 127.0
offset_right = 867.0
offset_bottom = 264.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jvf8m")
theme_override_font_sizes/font_size = 75
text = "SCORE: 0"

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = -25.0
offset_right = 922.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jvf8m")
theme_override_font_sizes/font_size = 150
text = "GAME OVER"
horizontal_alignment = 1

[node name="TitleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 447.0
offset_right = 858.0
offset_bottom = 575.0
theme_override_fonts/font = ExtResource("3_jvf8m")
theme_override_font_sizes/font_size = 100
text = "TITLE"
icon_alignment = 1
script = ExtResource("3_fbtbt")

[node name="RetryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 447.0
offset_right = 515.0
offset_bottom = 575.0
theme_override_fonts/font = ExtResource("3_jvf8m")
theme_override_font_sizes/font_size = 100
text = "RETRY"
script = ExtResource("3_wtwfm")

[node name="KillsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 199.0
offset_right = 824.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jvf8m")
theme_override_font_sizes/font_size = 75
text = "KILLS: 0"

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 271.0
offset_right = 914.0
offset_bottom = 408.0
theme_override_fonts/font = ExtResource("3_jvf8m")
theme_override_font_sizes/font_size = 100
text = "HIGH SCORE: "
